--- a/cc-frontend/src/Components/ProductView2/ProductView2.module.css
+++ b/cc-frontend/src/Components/ProductView2/ProductView2.module.css
@@ -708,3 +708,24 @@
     height: 35px;
   }
 }
+
+.hover_target {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background-color: lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hovered_div {
+  position: absolute;
+  width: 100px;
+  height: 50px;
+  background-color: lightcoral;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none; /* Allows the mouse to interact with elements underneath */
+}
