--- a/cc-frontend/src/Components/Login/Login.module.css
+++ b/cc-frontend/src/Components/Login/Login.module.css
@@ -123,7 +123,7 @@
 }
 
 .loginText {
-  font-family: "Inter";
+  font-family: "Nunito";
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
