--- a/cc-frontend/src/Components/Home/HomeSlider2/HomeSlider2.module.css
+++ b/cc-frontend/src/Components/Home/HomeSlider2/HomeSlider2.module.css
@@ -14,7 +14,14 @@
 }
 .productimg {
   width: 100%;
-  height: 200px;
+  /* min-height: 200px; */
+
+  min-height: -webkit-fill-available;
+  height: inherit;
+  margin-left: auto;
+  margin-right: auto;
+  /* border: 1px solid #00E5BE; */
+  border-radius: 10px;
 }
 .modelsArea {
   display: flex;
