--- a/cc-frontend/src/Components/Profiler/ProfilerHead/ProfilerHead.module.css
+++ b/cc-frontend/src/Components/Profiler/ProfilerHead/ProfilerHead.module.css
@@ -28,9 +28,73 @@
     margin-right: 15px;
   }
 }
+.xDivCopper {
+  font-family: "Nunito";
+  background-color: #b873339d;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  top: -5px;
+  right: 0;
+  position: absolute;
+}
+.xDivBronze {
+  font-family: "Nunito";
+  background-color: rgb(205, 127, 50, 0.759);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  top: -5px;
+  right: 0;
+  position: absolute;
+}
+.xDivSilver {
+  font-family: "Nunito";
+  background-color: rgb(192, 192, 192, 0.759);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  top: -5px;
+  right: 0;
+  position: absolute;
+}
+.xDivGold {
+  font-family: "Nunito";
+  background-color: rgba(255, 217, 0, 0.759);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  top: -5px;
+  right: 0;
+  position: absolute;
+}
+.xDivp {
+  margin: 0;
+  font-size: 18px;
+}
 .bronzeTrophy {
   color: rgb(205, 127, 50);
 }
+.copperTrophy {
+  color: #b873339d;
+}
+
 .silverTrophy {
   color: rgb(192, 192, 192);
 }
@@ -172,6 +236,7 @@
   line-height: 32px;
   color: #fed843;
   margin-left: 22px;
+  position: relative;
 }
 
 .buttonsArea {
