--- a/cc-frontend/src/Components/Footer/Footer.module.css
+++ b/cc-frontend/src/Components/Footer/Footer.module.css
@@ -1,76 +1,63 @@
-
-
-.footermain{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 116px;
-    background: #323232;
+.footermain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 116px;
+  background: #323232;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
-
-.footText{
-    font-family: 'Inter';
-font-style: normal;
-font-weight: 600;
-font-size: 30px;
-line-height: 36px;
-color: #FFFFFF;
+.footText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 36px;
+  color: #ffffff;
 }
 
+@media (max-width: 1350px) {
+  .footermain {
+    height: 70px;
+  }
 
-@media (max-width:1350px) {
-
-    .footermain{
-        height: 70px;
-    }
-    
-
-    .footText{
-        font-size: 25px;
-line-height: 32px;
-    }
+  .footText {
+    font-size: 25px;
+    line-height: 32px;
+  }
 }
 
-@media (max-width:992px) {
+@media (max-width: 992px) {
+  .footermain {
+    height: 60px;
+  }
 
-    .footermain{
-        height: 60px;
-    }
-    
-
-    .footText{
-        font-size: 20px;
-line-height: 32px;
-    }
+  .footText {
+    font-size: 20px;
+    line-height: 32px;
+  }
 }
 
+@media (max-width: 767px) {
+  .footermain {
+    height: 60px;
+  }
 
-
-@media (max-width:767px) {
-
-    .footermain{
-        height: 60px;
-    }
-    
-
-    .footText{
-        font-size: 18px;
-line-height: 32px;
-    }
+  .footText {
+    font-size: 18px;
+    line-height: 32px;
+  }
 }
 
+@media (max-width: 500px) {
+  .footermain {
+    height: 60px;
+  }
 
-@media (max-width:500px) {
-
-    .footermain{
-        height: 60px;
-    }
-    
-
-    .footText{
-        font-size: 16px;
-line-height: 32px;
-    }
+  .footText {
+    font-size: 16px;
+    line-height: 32px;
+  }
 }
