--- a/cc-frontend/src/Components/Login/Login.module.css
+++ b/cc-frontend/src/Components/Login/Login.module.css
@@ -4,6 +4,8 @@
   background: #1c1c1c;
   width: 100%;
   min-height: 100vh;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 .relatie {
   position: relative;
